fixes platform misalignment

--- a/css/style.css
+++ b/css/style.css
@@ -14,4 +14,5 @@
   justify-content:center;
   width:100vw;
   height:100vh;
+  background:#000;
 }
